--- a/custom_components/rag_search/manifest.json
+++ b/custom_components/rag_search/manifest.json
@@ -6,6 +6,6 @@
   "domain": "rag_search",
   "iot_class": "local_polling",
   "name": "HomeAssistant RAG Search",
-  "requirements": ["aiohttp"],
+  "requirements": ["aiohttp>=3.8.0"],
   "version": "1.0.0"
 }
